Docs update
* Minor fix to stylesheet for 2nd level navbar tabs
* New Properties tab under General tab
* Minor improvements and fixes on Benchmark configuration tabs
* Added examples to Configurations and Scenario tabs
* Added descriptions for key/value generators and key selectors